Fixed grid stretch from text

--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 * {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Verdana, sans-serif;
+  box-sizing: border-box;
 }
 
+:root {
+  --border-rad-default: 15px;
+}
+html {
+  max-height: 100vh;
+  display: flex;
+}
 body {
   display: grid;
   grid-template: 1fr 4fr / 1fr 4fr;
-  max-height: 100vh;
-  margin: 0;
+  margin: 0px;
 }
 
 #sidebar {
@@ -57,9 +64,74 @@ body {
 }
 
 #main-content {
-  background-color: lightgrey;
+  --thing: 1fr;
+  --thing2: 8fr;
+  background-color: #e3e8ef;
   display: grid;
-  grid-template: 1fr 1fr/ 8fr 2fr;
+  grid-template: var(--thing) var(--thing2) var(--thing) var(--thing2) / 3fr 1fr;
+  gap: 2vh;
+  padding-bottom: 5vh;
+  padding-left: 2vh;
+}
+
+.projects.label {
+}
+
+.projects.card-holder {
+  grid-row: 2 / span 3;
+  grid-column: 1;
+  display: grid;
+  grid-template: repeat(3, 1fr) / 1fr 1fr;
+  gap: 15px;
+}
+
+.projects .card {
+  border-radius: var(--border-rad-default);
+}
+
+.announcements.label {
+  grid-row: 1;
+  grid-column: 2;
+}
+
+.announcements.card-holder {
+  grid-row: 2;
+  grid-column: 2;
+  display: flex;
+  flex-direction: column;
+  border-radius: var(--border-rad-default);
+  overflow: hidden;
+}
+
+.announcements .card {
+  height: 11vh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
   padding: 10px;
-  gap: 10px;
+}
+
+.trending.label {
+  grid-row: 3;
+  grid-column: 2;
+}
+
+.trending.card-holder {
+  grid-row: 4;
+  grid-column: 2;
+  display: grid;
+  border-radius: var(--border-rad-default);
+  overflow: hidden;
+}
+
+.label {
+  display: flex;
+  align-items: flex-end;
+}
+
+.card-holder {
+}
+
+.card {
+  background-color: white;
 }
